# dvae-pytorch

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.txt
configs/: dvae_cifar10.yaml
dvae_pytorch/datasets/: wrappers.py
dvae_pytorch/models/: dvae.py  layers.py
dvae_pytorch/training/: callbacks.py  config.py  lightning.py  params_schedule.py  train.py
open_layout_lm/: add.py
open_layout_lm/models/: dvae.py  layers.py
tests/: test_add.py
tests/models/: test_dvae.py
tests/training/: test_lightning.py  test_params_schedule.py
