[project]
requires-python = ">=3.9"

[tool.ruff]
select = [
    "E", "F", "W", "D", "I", "N",
    "UP", "YTT", "ANN", "S", "BLE",
    "FBT", "B", "A", "C4", "DTZ",
    "T10", "EXE", "ISC", "ICN",
    "G", "PIE", "PT", "Q", "RSE",
    "RET", "SIM", "TID", "ARG",
    "PTH", "PD", "PGH", "PL",
    "TRY", "NPY", "RUF"
]
ignore = [
    "D104", # Missing docstring in public package
    "D100", # Missing docstring in public module
    "ANN101", # Missing type annotation for function argument 'self'
    "ANN204", # Missing return type annotation for special method
    "TRY003", # Avoid specifying long messages outside the exception class
]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 100
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py310"

[tool.ruff.per-file-ignores]
"tests/*" = [
    "D", # pydocstyle
    "S101" # Use of `assert` detected
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"